# opencl_practice

./: .gitignore  CMakeLists.txt  main.cpp
asset/: bias.txt  weight.txt
cl/: MNIST.cl  conv.cl  simple.cl  simple_add.cl
include/: Conv.hpp  MNIST.hpp  Utils.hpp
src/: Conv.cpp  MNIST.cpp  Utils.cpp
